fixed css, boxes overflowing

--- a/assets/style.css
+++ b/assets/style.css
@@ -61,11 +61,11 @@ menu {
 
 .search {
     width: 100%; 
-    height: 100%; 
+    /* height: 100%;  */
     padding-top: 10px; 
     padding-bottom: 10px; 
     padding-left: 30px; 
-    padding-right: 190px; 
+    padding-right: 30px; 
     background: #24343D; 
     box-shadow: 10px 10px 30px rgba(36.09, 52.40, 60.56, 0.60) inset; 
     border-radius: 12px; 
@@ -87,7 +87,7 @@ menu {
 }
 
 .search_input {
-  width: 1000px; 
+  width: 85%; 
   height: 75px;
   font-size: 55px;
   font-family: Poppins;
@@ -172,6 +172,16 @@ menu {
     word-wrap: break-word;
 }
 
+.fiveDayCard {
+  padding: 20px;
+  max-width: 350px;
+}
+
+.fiveDayCard img {
+  width: 80px;
+  height: 80px;
+}
+
 .forecastTitle {
     width: 100%; 
     height: 100%; 
@@ -204,17 +214,17 @@ menu {
   width: 15%; 
   height: 100%; 
   margin-top: 10px;
-  padding-top: 10px; 
+  padding: 10px; 
 }
 
 .search {
-    width: 85%; 
-    height: 100%; 
+    width: 95%; 
+    /* height: 100%;  */
     margin-top: 10px;
     padding-top: 10px; 
     padding-bottom: 10px; 
     padding-left: 30px; 
-    padding-right: 190px; 
+    padding-right: 30px; 
     background: #24343D; 
     box-shadow: 10px 10px 30px rgba(36.09, 52.40, 60.56, 0.60) inset; 
     border-radius: 12px; 
@@ -238,8 +248,15 @@ menu {
 
 .flexChildEl {
   flex: 1;
-  margin: 10px; 
+  margin: 10px;
+  padding-left: 20px; 
 }
+
+.flexChildEl img {
+  width: 100px;
+  height: 100px;
+}
+
 /* // Tehran
 color: white;
  font-size: 40px;
